# py-project-template

./: .gitignore  Makefile  README.md  pyproject.toml
src/: logger.py  path_manager.py
