[project]
name = "py-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    {name = "Ahram-41", email = "yuwen.w@nus.edu.sg"}
]
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.11.0",
    "isort>=5.12.0"
]

[tool.setuptools]
packages = ["src"]


[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip_glob = [".venv/*", "venv/*"] 
